--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.9'
-          cache: 'poetry'
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
@@ -24,6 +23,9 @@ jobs:
           version: latest
           virtualenvs-create: true
           virtualenvs-in-project: true
+
+      - name: Verify Poetry installation
+        run: poetry --version
 
       - name: Load cached Poetry dependencies
         id: cached-poetry-dependencies
