--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,7 +119,7 @@ check_untyped_defs = true
 disallow_untyped_decorators = false
 no_implicit_optional = true
 warn_redundant_casts = true
-warn_unused_ignores = true
+warn_unused_ignores = false
 warn_no_return = true
 strict_equality = true
 ignore_missing_imports = true
@@ -132,6 +132,7 @@ module = [
     "docx.*",
     "cssutils.*",
     "tinycss2.*",
+    "markdown.*",
 ]
 ignore_missing_imports = true
 
